# BrainLink

./: README.md  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: test.md
src/components/: BLButton.tsx  MarkdownEditor.tsx  SideBar.tsx  SideContext.tsx
src/css/: default.css
src/interface/: BLbt.ts  BLsc.ts
src/stores/: SideContextProvider.tsx
src/utils/: rust_api.ts  tauri_utils.ts
