[package]
name = "brainlink"
version = "0.1.0"
description = "An open-source, self-hosted personal AI note tool , built using Tauri and Rust."
authors = ["ADream", "Decade"]
edition = "2021"
license = ""
repository = ""
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "brainlink_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

